--- a/main.css
+++ b/main.css
@@ -22,7 +22,7 @@ body {
 	background-color: hsl(0, 100%, 74%);
 }
 
-img {
+.bgc-img {
 	position: absolute;
 	z-index: -10;
 }
@@ -56,32 +56,48 @@ img {
 	align-items: center;
 	width: 50%;
 	height: 100%;
-	padding: 9rem 9rem 9rem 2rem;
+	padding: 1rem 7rem 3rem 2rem;
 }
 
 .top-bar {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: 40px;
+    margin-bottom: 1rem;
+	height: 60px;
 	width: 100%;
 	background: hsl(248, 32%, 49%);
 	color: white;
-	border-radius: 5px;
+	border-radius: 10px;
 }
 
 .user-window {
 	display: flex;
-	justify-content: center;
+	justify-content: space-between;
 	align-items: center;
     flex-direction: column;
+    padding: 3rem;
 	width: 100%;
-	height: 300px;
+	height: 600px;
 	background: white;
+    border-radius: 10px;
 }
 
 .input {
-	width: 80%;
+	width: 100%;
+    height: 55px;
+    border-radius: 5px;
+    border: none;
+    border: 2px solid hsla(0, 100%, 74%, 0.65);
+}
+
+.warning {
+   position: relative;
+   right: 0;
+   display: flex;
+   flex-direction: row;
+   align-items: flex-end;
+   justify-content: flex-end;
 }
 
 footer {
