--- a/main.css
+++ b/main.css
@@ -59,45 +59,95 @@ body {
 	padding: 1rem 7rem 3rem 2rem;
 }
 
-.top-bar {
+.top-bar,
+.btn {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-    margin-bottom: 1rem;
+	margin-bottom: 1rem;
 	height: 60px;
 	width: 100%;
-	background: hsl(248, 32%, 49%);
+
 	color: white;
 	border-radius: 10px;
 }
 
+.top-bar {
+	background: hsl(248, 32%, 49%);
+	box-shadow: 0px 8px 2px rgba(0, 0, 0, 0.289);
+}
+
 .user-window {
+    position: relative;
 	display: flex;
 	justify-content: space-between;
-	align-items: center;
-    flex-direction: column;
-    padding: 3rem;
+	flex-direction: column;
+	padding: 3rem;
 	width: 100%;
 	height: 600px;
 	background: white;
-    border-radius: 10px;
+	border-radius: 10px;
 }
 
 .input {
+	padding: 1.5rem;
 	width: 100%;
-    height: 55px;
-    border-radius: 5px;
-    border: none;
-    border: 2px solid hsla(0, 100%, 74%, 0.65);
+	height: 55px;
+	border-radius: 5px;
+	border: none;
+	border: 2px solid hsla(0, 100%, 74%, 0.65);
+	font-size: 13px;
+	font-weight: 600;
+}
+
+.block::before {
+	content: '';
+    position: absolute;
+    left: 82%;
+    transform: translate(0, 55%);
+	width: 25px;
+	height: 25px;
+    background-image: url('/images/icon-error.svg');
+    background-position: center;
+    background-size: cover;
+}
+
+.block:last-child::before {
+    display: none;
 }
 
 .warning {
-   position: relative;
-   right: 0;
-   display: flex;
-   flex-direction: row;
-   align-items: flex-end;
-   justify-content: flex-end;
+	display: flex;
+	justify-content: flex-end;
+	padding-top: 5px;
+	color: hsl(0, 100%, 74%);
+	font-size: 12px;
+	font-style: italic;
+}
+
+.btn {
+	background: hsl(154, 59%, 51%);
+	border: none;
+	box-shadow: inset 0px -14px 22px -24px rgba(66, 68, 90, 1);
+	text-transform: uppercase;
+	font-weight: 700;
+	letter-spacing: 1px;
+	cursor: pointer;
+}
+
+.terms {
+	font-size: 12px;
+	text-align: center;
+	color: rgba(0, 0, 0, 0.459);
+}
+
+.terms-style {
+	font-weight: 700;
+	color: hsl(0, 100%, 74%);
+}
+
+.active {
+	display: flex;
 }
 
 footer {
