--- a/main.css
+++ b/main.css
@@ -81,7 +81,7 @@ body {
 }
 
 .user-window {
-    position: relative;
+	position: relative;
 	display: flex;
 	justify-content: space-between;
 	flex-direction: column;
@@ -90,7 +90,6 @@ body {
 	background: white;
 	border-radius: 10px;
 	box-shadow: 0px 8px 2px rgba(0, 0, 0, 0.289);
-	
 }
 
 .input {
@@ -111,18 +110,18 @@ body {
 .block::before {
 	content: '';
 	display: none;
-    position: absolute;
-    left: 82%;
-    transform: translate(0, 55%);
+	position: absolute;
+	left: 82%;
+	transform: translate(0, 55%);
 	width: 25px;
 	height: 25px;
-    background-image: url('images/icon-error.svg');
-    background-position: center;
-    background-size: cover;
+	background-image: url('images/icon-error.svg');
+	background-position: center;
+	background-size: cover;
 }
 
 .block:last-child::before {
-    display: none;
+	display: none;
 }
 
 .warning {
@@ -142,7 +141,7 @@ body {
 	font-weight: 700;
 	letter-spacing: 1px;
 	cursor: pointer;
-	transition: background .5s;
+	transition: background 0.5s;
 }
 
 .btn:hover {
@@ -170,4 +169,52 @@ footer {
 	bottom: 0;
 	transform: translate(-50%);
 	color: wheat;
+}
+
+@media (max-width: 375px) {
+	.card {
+		flex-direction: column;
+		width: 350px;
+		align-items: center;
+		height: 100%;
+	}
+
+	.left-card {
+		width: 100%;
+		height: 28%;
+		padding: 2rem;
+		text-align: center;
+	}
+	.right-card {
+		height: 70%;
+		width: 100%;
+		padding: 0;
+	}
+
+	.headline {
+		font-size: 1.5rem;
+		line-height: 1.8rem;
+	}
+	.description {
+		font-size: 0.5rem;
+		padding-top: 1rem;
+		font-size: .9rem;
+	}
+	.top-bar, .user-window {
+		width: 90%;
+	}
+
+	.user-window {
+		padding: 1.5rem;
+	}
+
+	.top-bar {
+		flex-direction: column;
+		height: 5rem;
+		font-size: .9rem;
+	}
+
+	footer {
+		display: none;
+	}
 }
